[options]
py_modules = certbot_dns_rcode0
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
install_requires =
    acme>=0.31.0
    certbot>=0.31.0
    dns-lexicon>=3.3.8
    zope.interface

[options.entry_points]
certbot.plugins =
    dns-rcode0 = certbot_dns_rcode0:Authenticator

[metadata]
name             = certbot-dns-rcode0
description      = RcodeZero DNS Authenticator plugin for Certbot
long_description = file: README.rst
author           = Michael Braunoeder
author_email     = mib@nic.at
license          = Apache License 2.0
classifiers      =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP
    Topic :: Security
    Topic :: System :: Installation/Setup
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    Topic :: Utilities
long_description_content_type = text/x-rst

[bdist_wheel]
universal = 1
